<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nummern raten</string>
    <string name="app_name_highscore">Nummern raten: Highscore</string>
    <string name="label_select">Bitte wähle eine Nummer zwischen 1 und 1000:</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="label_try">Versuch</string>
    <string name="label_number">Zahl</string>
    <string name="label_result">Ergebnis</string>
    <string name="label_ntry">%d.</string>
    <string name="label_result_too_high">Leider zu hoch! Probier es noch einmal!</string>
    <string name="label_result_too_low">Leider zu niedrig! Probier es noch einmal!</string>
    <string name="label_result_good">Glückwunsch! Du hast richtig geraten.</string>
    <string name="label_date">Datum</string>
    <string name="label_ntries">Versuche</string>
    <string name="label_name">Name</string>
    <string name="newhighscoredialog_title">Glückwunsch!</string>
    <string name="newhighscoredialog_text">Du hast richtig geraten. Du kannst nun deinen Namen eingeben, um dich in der Highscore zu verewigen.</string>
    <string name="menu_show_highscores">Highscore anzeigen.</string>
</resources>
