<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical"
	>
	<ScrollView 
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		>
		<TableLayout 
			android:layout_height="wrap_content"
			android:layout_width="fill_parent" 
			android:id="@+id/highscore_table"
			>
			<TableRow 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				>
				<TextView
					android:layout_height="wrap_content" 				
					android:layout_width="wrap_content"
					android:layout_weight="1"
					android:padding="2dp"
					android:text="@string/label_ntries"
					/>
				<TextView 
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_weight="2"
					android:padding="2dp"
					android:text="@string/label_date"
					/>
				<TextView 
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_weight="8"
					android:padding="2dp"
					android:text="@string/label_name"
					/>
			</TableRow>
		</TableLayout>
	</ScrollView>
</LinearLayout>
